# sparta

./: .gitattributes  collide.cpp  collide_vss.cpp  dev  interCpp.cpp  update.cpp
cmake/: CMakeLists.txt
examples/ambi/: air.tce  in.ambi
examples/bfield/: in.bfield
examples/chem/: in.chem
examples/emit/: LCFS.stl  geomtry.txt  get_soledge.py  in.emit.surf.flow  in.emit.surf.normal  in.west  plasma.reflection  plasma.species  plasma.surf  plasma.vss  plotter.py  tmp.grid
examples/flowfile/: in.flowfile  plotter.py  tmp.grid
src/: CMakeLists.txt  adasRatesInterpolator.cpp  adasRatesInterpolator.h  collide.cpp  collide.h  collide_vss.cpp  collide_vss.h  compute_grid.cpp  domain.h  dump_particle.cpp  dump_particle.h  fix_emit_surf.cpp  geometry_tools.cpp  geometry_tools.h  grid.cpp  input.cpp  input.h  magnetic_field_data.txt  react_adas.cpp  react_adas.h  react_bird.cpp  react_bird.h  react_coulomb.cpp  react_coulomb.h  react_tce.cpp  react_tce.h  surf_collide_diffuse.cpp  surf_collide_diffuse.h  surf_collide_vanish.cpp  surf_react_prob.cpp  surf_react_prob.h  surf_react_probReflect.cpp  surf_react_probReflect.h  surfaceDataInterpolator.cpp  surfaceDataInterpolator.h  test.py  update.cpp  update.h  variable.cpp  variable.h
tools/pizza/: density.py
